--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,11 @@ readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.10"
 dependencies = [
-    "langgraph>=1.0.0",
+    "langgraph>=1.0.6",
+    "langchain>=0.3.0",
+    "langchain-openai>=0.2.0",
     "python-dotenv>=1.0.1",
+    "typing-extensions>=4.12.0",
 ]
 
 
