--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "langchain-openai>=0.2.0",
     "python-dotenv>=1.0.1",
     "typing-extensions>=4.12.0",
+    "holidays>=0.88",
 ]
 
 
