feat: Implement `find_available_windows` agent tool by refactoring PMS data processing for windowing and integrating Google Drive for room specifications.

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,13 @@ LANGSMITH_TRACING=true
 LANGSMITH_ENDPOINT=https://api.smith.langchain.com
 LANGSMITH_API_KEY=your_langsmith_api_key
 LANGSMITH_PROJECT=project_name
+
+# PMS Configuration
+PMS_BASE_URL=api
+PMS_HOTEL_CODE=code
+PMS_USERNAME=username
+PMS_PASSWORD=password
+PMS_ACCESS_TOKEN=token
+
+
+GOOGLE_DRIVE_ROOT_ID=rootfolderId
