--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "typing-extensions>=4.12.0",
     "holidays>=0.88",
+    "google-api-python-client>=2.155.0",
+    "google-auth>=2.36.0",
 ]
 
 
